# hertta-ui

./: .gitignore  Dockerfile  config.json  package-lock.json  package.json  repository.json
addons/hertta/: Dockerfile  run.sh
addons/hertta/backend/: .gitignore  Cargo.toml  rocket.toml
addons/hertta/backend/src/: errors.rs  input_data.rs  main.rs  test.txt
addons/hertta/frontend/: .gitignore  package-lock.json  package.json
addons/hertta/frontend/src/: App.css  DeviceCards.js  DeviceControl.js  DeviceDataForm.js  Sidebar.js  index.js
frontend/src/: DataTable.js  DeviceControl.css  generateJsonContent.js
src/: App.js  ControlDataBarChart.js  DataTable.js  DeviceDataForm.css  DeviceDataForm.js  ElectricHeaterForm.js  InputDataCreator.js  InputDataSender.js  Input_GenConstraints.js  Input_Markets.js  Input_NodeDiffusion.js  Input_Nodes.js  Input_Processes.js  Input_Risk.js  Input_Room.js  Input_SetupData.js  InteriorAirSensorForm.js  Layout.js  NetworkGraph.js  Sidebar.js
