[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "52.0.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
reqwest = "0.12.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
warp = "0.3.7"


